# zkaf

./: .gitignore  Cargo.toml  Dockerfile  README.md  lsyncd.conf  package.json  pnpm-lock.yaml
inputs/: example-same.inp  example-string.json  example.json  twitter_test_proof.json
scripts/: use-sol-deps.ts
src/: lib.rs  main.rs  rand.rs  utils.rs
src/fixtures/: twitter_proof.min.json
