[package]
name = "zkaf"
version = "0.0.1"
edition = "2021"

[dependencies]
ark-pallas = { git = "https://github.com/NilFoundation/arkworks-curves.git" }
ark-ff = { git = "https://github.com/NilFoundation/arkworks-algebra.git" }
serde_json = "1.0.107"
tlsn-core = { git = "https://github.com/usherlabs/tlsn", rev = "6152883" }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
chrono = "0.4.31"
p256 = { version = "0.13", features = ["ecdsa"] }

[features]
# default = []
zkllvm = ["ark-pallas/zkllvm"]